--- a/geri-plus/src/app/pages/admin-dashboard/cadastros/idoso/idoso.html
+++ b/geri-plus/src/app/pages/admin-dashboard/cadastros/idoso/idoso.html
@@ -1,6 +1,26 @@
-<app-form-cadastro
-  [titulo]="'Cadastro de Idoso'"
-  [campos]="idosoCampos"
-  [salvarLabel]="'Salvar Idoso'"
-  (submitForm)="onSubmitIdoso($event)"
-></app-form-cadastro>
+<div class="cadastro-page">
+  <h1>Cadastro de Idosos</h1>
+
+  <button type="button" class="btn btn-primary mb-3" (click)="novoCadastro()">
+    + Novo Idoso
+  </button>
+
+  <app-lista-cards
+    [titulo]="'Idosos cadastrados'"
+    [itens]="listaIdosos"
+    [camposResumo]="['nome', 'cpf', 'quarto', 'statusResidencia']"
+    [exibirFoto]="true"
+    (editar)="abrirFormEdicao($event)"
+    (excluir)="onExcluir($event)">
+  </app-lista-cards>
+
+  <app-form-cadastro
+    *ngIf="modoEdicao"
+    [titulo]="initialValue ? 'Editar Idoso' : 'Novo Idoso'"
+    [campos]="idosoCampos"
+    [initialValue]="initialValue"
+    [salvarLabel]="'Salvar'"
+    [exibirFoto]="true"
+    (submitForm)="onSubmitIdoso($event)">
+  </app-form-cadastro>
+</div>
