--- a/geri-plus/src/app/pages/admin-dashboard/prescricoes-medicas/prescricoes-medicas.html
+++ b/geri-plus/src/app/pages/admin-dashboard/prescricoes-medicas/prescricoes-medicas.html
@@ -1,1 +1,6 @@
-<p>prescricoes-medicas works!</p>
+<section class="prescricoes-medicas">
+  <h2>Prescrições Médicas</h2>
+
+  <!-- Aqui chamamos o componente genérico -->
+  <app-tabela-prescricoes [prescricoes]="listaPrescricoes"></app-tabela-prescricoes>
+</section>
