--- a/geri-plus/src/app/pages/painel-idoso/painel-idoso.html
+++ b/geri-plus/src/app/pages/painel-idoso/painel-idoso.html
@@ -1,1 +1,7 @@
-<p>painel-idoso works!</p>
+<app-painel-container
+  [nomeFamiliar]="nomeFamiliar"
+  [nomeHospede]="nomeHospede"
+  [cpfHospede]="cpfHospede"
+>
+</app-painel-container>
+
