--- a/geri-plus/src/app/pages/painel-idoso/recomendacoes-medicas/recomendacoes-medicas.html
+++ b/geri-plus/src/app/pages/painel-idoso/recomendacoes-medicas/recomendacoes-medicas.html
@@ -1,1 +1,12 @@
-<p>recomendacoes-medicas works!</p>
+<section>
+  <h2>Recomendações Médicas</h2>
+  <app-card-generico
+    *ngFor="let p of prescricoesDoIdoso"
+    titulo="{{ p.nome }}"
+    subtitulo="{{ p.dosagem }}"
+    descricao="Horários: {{ p.frequenciaDiaria }} | Observações: {{ p.observacoes }}"
+    icone="pills"
+    tipo="{{ 'success' }}"
+  >
+  </app-card-generico>
+</section>
