Adicionando cadastro Admin

--- a/geri-plus/src/app/pages/admin-dashboard/cadastros/admin/admin.html
+++ b/geri-plus/src/app/pages/admin-dashboard/cadastros/admin/admin.html
@@ -17,7 +17,8 @@
 
   <!-- Formulário de cadastro -->
   <app-form-cadastro
-    [titulo]="'Cadastro de Administrador'"
+    *ngIf="modoEdicao"
+  [titulo]="'Cadastro de Administrador'"
     [campos]="adminCampos"
     [initialValue]="initialValue"
     [salvarLabel]="'Salvar Admin'"
